# lailabot

./: .gitignore  README.md  com.lailabot.plist  idea.md  pyproject.toml  start.sh
.claude/: settings.local.json
src/lailabot/: __main__.py  approval_hook.py  approval_server.py  claude_code_runner.py  logger.py  message_formatter.py  session_manager.py  telegram_bot.py
tests/: test_approval_hook.py  test_approval_server.py  test_claude_code_runner.py  test_logger.py  test_message_formatter.py  test_session_manager.py  test_telegram_bot.py
